Fix text misalignment in new menu items

--- a/Profile Folder/chrome/styles/partials/chrome/chrome-1/_menu.scss
+++ b/Profile Folder/chrome/styles/partials/chrome/chrome-1/_menu.scss
@@ -50,7 +50,7 @@ menupopup {
 
 		&::before {
 			content: attr(aria-label);
-			transform: translateX(34px);
+			transform: translateX(32px);
 			display: flex;
 			align-items: center;
 			height: 100%;
