--- a/Profile Folder/chrome/userChrome.css
+++ b/Profile Folder/chrome/userChrome.css
@@ -4266,7 +4266,7 @@ menupopup #context-sep-navigation {
 }
 #context-navigation .menuitem-iconic::before {
   content: attr(aria-label);
-  transform: translateX(34px);
+  transform: translateX(32px);
   display: flex;
   align-items: center;
   height: 100%;
